--- a/gitea-api.cabal
+++ b/gitea-api.cabal
@@ -12,6 +12,8 @@ description:    .
                 .
                 OpenAPI version: 3.0.1
                 .
+                Generated using Gitea 1.11.6
+                .
 category:       Web
 homepage:       https://openapi-generator.tech
 author:         Obsidian Systems LLC
