--- a/gitea-api.cabal
+++ b/gitea-api.cabal
@@ -1,16 +1,18 @@
 name:           gitea-api
-version:        1.11.6.0
+version:        1.19.4.0
 synopsis:       Auto-generated gitea-api API Client
 description:    .
                 Client library for calling the Gitea API. API based on http-client.
                 .
-                host: localhost
+                host: https
                 .
-                base path: http://localhost/api/v1
+                base path: http://https://gitea.com/api/v1
                 .
-                Gitea API. API version: 1.11.6
+                Gitea API. API version: 1.19.4
                 .
                 OpenAPI version: 3.0.1
+                .
+                Generator version: 7.6.0
                 .
 category:       Web
 homepage:       https://openapi-generator.tech
@@ -39,40 +41,44 @@ library
       lib
   ghc-options: -Wall -funbox-strict-fields
   build-depends:
-      aeson >=1.0 && <2.0
+      aeson >=1.0 && <3.0
     , base >=4.7 && <5.0
     , base64-bytestring >1.0 && <2.0
-    , bytestring >=0.10.0 && <0.11
+    , bytestring >=0.10.0
     , case-insensitive
     , containers >=0.5.0.0 && <0.8
     , deepseq >= 1.4 && <1.6
     , exceptions >= 0.4
-    , http-api-data >= 0.3.4 && <0.5
-    , http-client >=0.5 && <0.7
+    , http-api-data >= 0.3.4 && <0.6
+    , http-client >=0.5 && <0.8
     , http-client-tls
     , http-media >= 0.4 && < 0.9
     , http-types >=0.8 && <0.13
     , iso8601-time >=0.1.3 && <0.2.0
-    , microlens >= 0.4.3 && <0.5
+    , microlens >= 0.4.3
     , mtl >=2.2.1
-    , network >=2.6.2 && <2.9
+    , network >=2.6.2 && <3.9
     , random >=1.1
     , safe-exceptions <0.2
-    , text >=0.11 && <1.3
-    , time >=1.5 && <1.10
+    , text >=0.11 && <3
+    , time >=1.5
     , transformers >=0.4.0.0
     , unordered-containers
-    , vector >=0.10.9 && <0.13
+    , vector >=0.10.9 && <0.14
   other-modules:
       Paths_gitea_api
   exposed-modules:
       Gitea
       Gitea.API
+      Gitea.API.Activitypub
       Gitea.API.Admin
       Gitea.API.Issue
       Gitea.API.Miscellaneous
+      Gitea.API.Notification
       Gitea.API.Organization
+      Gitea.API.Package
       Gitea.API.Repository
+      Gitea.API.Settings
       Gitea.API.User
       Gitea.Client
       Gitea.Core
@@ -102,7 +108,7 @@ test-suite tests
     , QuickCheck
     , aeson
     , base >=4.7 && <5.0
-    , bytestring >=0.10.0 && <0.11
+    , bytestring >=0.10.0
     , containers
     , hspec >=1.8
     , iso8601-time
