--- a/gitea-api.cabal
+++ b/gitea-api.cabal
@@ -1,14 +1,14 @@
 name:           gitea-api
-version:        1.20.6.0
+version:        1.21.11.0
 synopsis:       Auto-generated gitea-api API Client
 description:    .
-                Client library for calling the Gitea API. API based on http-client.
+                Client library for calling the Gitea API API based on http-client.
                 .
                 host: https
                 .
                 base path: http://https://gitea.com/api/v1
                 .
-                Gitea API. API version: 1.20.6
+                Gitea API API version: 1.21.11
                 .
                 OpenAPI version: 3.0.1
                 .
