--- a/gitea-api.cabal
+++ b/gitea-api.cabal
@@ -1,14 +1,14 @@
 name:           gitea-api
-version:        1.21.11.0
+version:        1.22.6.0
 synopsis:       Auto-generated gitea-api API Client
 description:    .
                 Client library for calling the Gitea API API based on http-client.
                 .
-                host: https
+                host: localhost
                 .
-                base path: http://https://gitea.com/api/v1
+                base path: /api/v1
                 .
-                Gitea API API version: 1.21.11
+                Gitea API API version: 1.22.6
                 .
                 OpenAPI version: 3.0.1
                 .
@@ -22,12 +22,11 @@ copyright:      2020 Obsidian Systems LLC
 license:        BSD3
 build-type:     Simple
 cabal-version:  >= 1.10
-tested-with: GHC ==8.6.5
+tested-with: GHC ==8.10.7
 license-file: LICENSE
 
 
 extra-source-files:
-    ChangeLog.md
     README.md
     openapi.yaml
 
